miniextendr-macros/tests/ui/typed_df_unknown_param.stderr
error: typed_df: parameter `nope` not found in function signature
 --> tests/ui/typed_df_unknown_param.rs:5:24
  |
5 | #[miniextendr(typed_df(nope = typed_dataframe!(x: i32)))]
  |                        ^^^^
